靜態檔案v1.2.3 == 合併上游源碼

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html><html lang="zh-CN"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no"><meta http-equiv="X-UA-Compatible" content="ie=edge"><link rel="icon" href="./images/logo.png"><title>EZ</title><link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet"><style>@media (min-width: 769px) {
+<!doctype html><html lang="zh-CN"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no"><meta http-equiv="X-UA-Compatible" content="ie=edge"><link rel="icon" href="./images/logo.png"><title>EZ-DEMO-TITLE</title><link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet"><style>@media (min-width: 769px) {
             html, body, div, main, section, article, aside, nav {
                 scrollbar-width: none !important;
                 -ms-overflow-style: none !important;
@@ -48,4 +48,4 @@
             user-select: none;
             pointer-events: none;
             z-index: 5;
-        }</style><script defer="defer" src="static/js/chunk-vendors.aa7ef7aa.js"></script><script defer="defer" src="static/js/index.f51e3110.js"></script></head><body><div id="app"></div><div class="app-version">v0.3.8</div></body></html>
+        }</style><script defer="defer" src="static/js/chunk-vendors.aa7ef7aa.js"></script><script defer="defer" src="static/js/index.7cf1ac31.js"></script></head><body><div id="app"></div><div class="app-version">v0.3.8</div></body></html>
